Refactor code to retrieve and display the last round scores by sheetId

--- a/front-end/src/app/components/result/result.component.html
+++ b/front-end/src/app/components/result/result.component.html
@@ -53,7 +53,7 @@
         [nzSize]="'large'"
         nz-button
         nzType="primary"
-        [disabled]="!isAuth || isSaved"
+        [disabled]="!isAuth"
         (click)="saveScoresToRankings()"
       >
         Cập nhật vào bảng xếp hạng
